# ocean-ddd

./: .gitignore  Cargo.toml
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  error_codes.rs  lib.rs  prelude.rs
crates/shared/src/http/: pagination.rs  response.rs
crates/shared/src/infrastructure/: db.rs  log.rs  mod.rs
crates/shared/src/infrastructure/configs/: database.rs  jwt.rs  logger.rs  mod.rs  server.rs
crates/shared/src/types/: audit.rs  id.rs  mod.rs  status.rs
crates/sys/: Cargo.toml
crates/sys/src/dictionary/domain/entity/: dict.rs  dict_item.rs  mod.rs
crates/sys/src/dictionary/domain/error/: dict_error.rs  mod.rs
crates/sys/src/dictionary/domain/repository/: dict_repo.rs  mod.rs
crates/sys/src/dictionary/domain/value_object/: dict_code.rs  dict_item_color.rs  dict_item_label.rs  dict_item_value.rs  dict_name.rs  mod.rs
crates/sys/src/dictionary/infrastructure/persistence/: dict_repo_impl.rs  mod.rs
crates/sys/src/dictionary/infrastructure/persistence/model/: dict_item_model.rs  dict_model.rs  mod.rs
migrations/: 20260511112353_sys_dict.down.sql  20260511112353_sys_dict.up.sql
