[package]
name = "sys"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
shared = { workspace = true }

# 公共依赖
tokio = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }

# 序列化
serde = { workspace = true }

# 数据库
sqlx = { workspace = true }

# 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# dto 验证规则
validator = { workspace = true }
